--- a/team-P/package.json
+++ b/team-P/package.json
@@ -1,7 +1,6 @@
 {
   "name": "team-p",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -34,5 +33,6 @@
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
-  }
+  },
+  "description": ""
 }
