--- a/team-P/package.json
+++ b/team-P/package.json
@@ -5,23 +5,36 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node src/server/index.ts",
-    "start:dev": "nodemon --exec ts-node src/server/index.ts",
-    "prepare": "husky"
+    "start:dev": "nodemon --exec ts-node src/server/index.ts --ext js,css,ejs --ignore src/public/js",
+    "start:dev": "concurrently --names server,frontend -c blue,green \"npm run server:dev\" \"npm run build:dev\"",
+    "server:dev": "nodemon --exec ts-node src/server/index.ts --ext js,css,ejs --ignore src/public/js",
+    "build:dev": "webpack build --mode development --watch",
+    "prepare": "husky",
+    "build": "webpack build"
+   
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/connect-livereload": "^0.6.3",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^5.0.0",
+    "@types/livereload": "^0.9.5",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.8.1",
+    "@types/webpack": "^5.28.5",
+    "concurrently": "^9.1.0",
+    "connect-livereload": "^0.6.1",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
+    "livereload": "^0.9.3",
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "webpack": "^5.96.1",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "cookie-parser": "^1.4.7",
@@ -29,7 +42,8 @@
     "ejs": "^3.1.10",
     "express": "^5.0.1",
     "http-errors": "^2.0.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "ts-loader": "^9.5.1"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
