--- a/team-P/package.json
+++ b/team-P/package.json
@@ -5,24 +5,26 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node src/server/index.ts",
-    "start:dev": "nodemon --exec ts-node src/server/index.ts --ext js,css,ejs --ignore src/public/js",
     "start:dev": "concurrently --names server,frontend -c blue,green \"npm run server:dev\" \"npm run build:dev\"",
-    "server:dev": "nodemon --exec ts-node src/server/index.ts --ext js,css,ejs --ignore src/public/js",
+    "server:dev": "nodemon --exec ts-node src/server/index.ts --ext ts,js,css,ejs --ignore src/public/js",
     "build:dev": "webpack build --mode development --watch",
     "prepare": "husky",
     "build": "webpack build"
-   
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/connect-livereload": "^0.6.3",
+    "@types/connect-pg-simple": "^7.0.3",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^5.0.0",
+    "@types/express-flash": "^0.0.5",
+    "@types/express-session": "^1.18.0",
     "@types/livereload": "^0.9.5",
     "@types/morgan": "^1.9.9",
-    "@types/node": "^22.8.1",
+    "@types/node": "^22.9.0",
     "@types/webpack": "^5.28.5",
     "concurrently": "^9.1.0",
     "connect-livereload": "^0.6.1",
@@ -37,12 +39,17 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "connect-pg-simple": "^10.0.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^5.0.1",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.18.1",
     "http-errors": "^2.0.0",
     "morgan": "^1.10.0",
+    "pg-promise": "^11.10.2",
     "ts-loader": "^9.5.1"
   },
   "lint-staged": {
